# 42sh

./: .gitignore  42  42sh  AST_def_node.txt  Dockerfile  Doxyfile  Makefile  Makefile.in  README.md  \  check.sh  config.status  configure  configure.ac  debug.sh  file.sh  gcc.sh  gramaire.txt  pretty_print.sh  run_docker.sh  script.sh  test.txt  test_failed_wf
deuteragonist/: configure.ac
deuteragonist/src/ast/: ast.h
deuteragonist/src/lexer/: lexer.c  lexer.h
deuteragonist/src/parser/: Makefile.am  parser.c
src/: 42sh.c  42sh.h  AST_def_node.txt  AST_node.txt  Makefile  Makefile.am  Makefile.in  environment.c  environment.h  launch_shell.c  launch_shell.h  main_test_lexer.c  token.h  utils.c  utils.h
src/IO/: Makefile.am
src/IO/input/: input.c
src/ast/: Makefile  Makefile.am  Makefile.in  ast.c  ast.h
src/environment/: Makefile  Makefile.am  Makefile.in  environment.c  environment.h
src/execution/: Makefile  Makefile.am  Makefile.in  execute_command.c  execute_command.h  execution.c  execution.h  execution_utils.c  execution_utils.h  main.c  my_echo.h  my_pipe.c  my_pipe.h  myredir.c  pretty_print.c
src/execution/builtins/my_alias/: my_alias.c  my_alias.h
src/execution/builtins/my_alias/.deps/: libexecution_a-my_alias.Po
src/execution/builtins/my_break/: my_break.c  my_break.h
src/execution/builtins/my_break/.deps/: libexecution_a-my_break.Po
src/execution/builtins/my_cd/: my_cd.c  my_cd.h
src/execution/builtins/my_cd/.deps/: libexecution_a-my_cd.Po  unit_tests-my_cd.Po
src/execution/builtins/my_continue/: my_continue.c  my_continue.h
src/execution/builtins/my_continue/.deps/: libexecution_a-my_continue.Po
src/execution/builtins/my_dot/: my_dot.c  my_dot.h
src/execution/builtins/my_dot/.deps/: libexecution_a-my_dot.Po
src/execution/builtins/my_echo/: my_echo.c  my_echo.h
src/execution/builtins/my_echo/.deps/: libexecution_a-my_echo.Po  unit_tests-my_echo.Po
src/execution/builtins/my_exit/: my_exit.c  my_exit.h
src/execution/builtins/my_exit/.deps/: libexecution_a-my_exit.Po
src/execution/builtins/my_export/: my_export.c  my_export.h
src/execution/builtins/my_export/.deps/: libexecution_a-my_export.Po  unit_tests-my_export.Po
src/execution/builtins/my_redir/: my_redir.c  my_redir.h
src/execution/builtins/my_redir/.deps/: libexecution_a-my_redir.Po
src/execution/builtins/my_unset/: my_unset.c  my_unset.h
src/execution/builtins/my_unset/.deps/: libexecution_a-my_unset.Po  unit_tests-my_unset.Po
src/execution/builtins/operators/: operators.c  operators.h
src/execution/builtins/operators/.deps/: libexecution_a-operators.Po
src/execution/execute_command/: execute_command.c  execute_command.h
src/execution/my_break/: my_break.c  my_break.h
src/execution/my_cd/: my_cd.c  my_cd.h
src/execution/my_continue/: my_continue.c  my_continue.h
src/execution/my_dot/: my_dot.c  my_dot.h
src/execution/my_echo/: my_echo.c
src/execution/my_exit/: my_exit.c  my_exit.h
src/execution/my_export/: my_export.c  my_export.h
src/execution/my_redir/: my_redir.c  my_redir.h
src/execution/my_unset/: my_unset.c  my_unset.h
src/execution/unset/: unset.c  unset.h
src/expansion/: Makefile  Makefile.am  Makefile.in  command_sub.c  command_sub.h  expansion.c  expansion.h  expansion_utils.c  expansion_utils.h
src/hash_map/: Makefile  Makefile.am  Makefile.in  hash.c  hash_map.c  hash_map.h
src/io_backend/: Makefile  Makefile.am  Makefile.in  input.c  input.h  main.c
src/lexer/: Makefile  Makefile.am  Makefile.in  input_stack.c  input_stack.h  lexer.c  lexer.h  lexer_utils.c  lexer_utils.h  main.c  test  utils.c  utils.h
src/parser/: Makefile  Makefile.am  Makefile.in  parser.c  parser.h  parser_first.c  parser_first.h  parser_follow.c  parser_follow.h  pretty_print.c  print_parser.c  print_parser.h  usefull_fnct.c  usefull_fnct.h
src/parser/parser_firsts/: first_command.c  first_command.h  first_condition.c  first_condition.h  first_loop.c  first_loop.h  first_sequence.c  first_sequence.h  first_token.c  first_token.h  switch_first.c  switch_first.h
src/parser/parser_firsts/.deps/: libparser_a-first_command.Po  libparser_a-first_condition.Po  libparser_a-first_loop.Po  libparser_a-first_sequence.Po  libparser_a-first_token.Po  libparser_a-switch_first.Po
src/parser/parser_fnct/: parser_command.c  parser_condition.c  parser_loop.c  parser_sequence.c  parser_switch.c  parser_token.c  usefull_fnct.c
src/parser/parser_fnct/.deps/: libparser_a-parser_command.Po  libparser_a-parser_condition.Po  libparser_a-parser_loop.Po  libparser_a-parser_sequence.Po  libparser_a-parser_switch.Po  libparser_a-parser_token.Po
src/parser/parser_follows/: follow_command.c  follow_command.h  follow_condition.c  follow_condition.h  follow_loop.c  follow_loop.h  follow_sequence.c  follow_sequence.h  follow_token.c  follow_token.h  switch_follow.c  switch_follow.h
src/parser/parser_follows/.deps/: libparser_a-follow_command.Po  libparser_a-follow_condition.Po  libparser_a-follow_loop.Po  libparser_a-follow_sequence.Po  libparser_a-follow_token.Po  libparser_a-switch_follow.Po
src/utils/: utils.c  utils.h
tests/: Makefile  Makefile.am  Makefile.in  func_tests.sh  test_failed  tests.sh
tests/unit/: Makefile  Makefile.am  Makefile.in  cd_tests.c  echo_tests.c  export_tests.c  lexer_tests.c  unit_tests  unset_tests.c
tests/unit/.deps/: unit_tests-cd_tests.Po  unit_tests-echo_tests.Po  unit_tests-export_tests.Po  unit_tests-lexer_tests.Po  unit_tests-unset_tests.Po
